--- a/index.html
+++ b/index.html
@@ -48,6 +48,148 @@
             </form>
         </div>
     </nav>
+
+     <!-- Container principale -->
+     <div class="container mt-4">
+        <div class="row">
+            <!-- Sezione principale: Tabella -->
+            <div class="col-md-8">
+                <h2 class="mb-3">Catalogo Libri</h2>
+                <!-- Bottone Aggiungi Libro -->
+                <div class="text-end mb-2">
+                    <button class="btn btn-primary">
+                       Aggiungi Libro
+                    </button>
+                </div>
+                <!-- Tabella -->
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Titolo</th>
+                            <th>Data prestito</th>
+                            <th>Stato</th>
+                            <th class="text-center">Azioni</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>I pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge bg-success">Disponibile</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>I promessi sposi</td>
+                            <td>-</td>
+                            <td><span class="badge bg-success">Disponibile</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Il signore degli anelli</td>
+                            <td>18/10/2023</td>
+                            <td><span class="badge bg-warning text-white">In prestito</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Harry Potter e la pietra filosofale</td>
+                            <td>-</td>
+                            <td><span class="badge bg-success">Disponibile</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Il codice da Vinci</td>
+                            <td>-</td>
+                            <td><span class="badge bg-danger">Non disponibile</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Shining</td>
+                            <td>-</td>
+                            <td><span class="badge bg-success">Disponibile</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>La Divina Commedia</td>
+                            <td>21/09/23</td>
+                            <td><span class="badge bg-warning text-white">In prestito</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Il trono di spade</td>
+                            <td>-</td>
+                            <td><span class="badge bg-success">Disponibile</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Il mondo di sofia</td>
+                            <td>-</td>
+                            <td><span class="badge bg-danger">Non disponibile</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Le cronache di Narnia: Il leone, lo specchio e l'armadio</td>
+                            <td>25/07/2023</td>
+                            <td><span class="badge bg-warning text-white">In prestito</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>Il piccolo principe</td>
+                            <td>-</td>
+                            <td><span class="badge bg-success">Disponibile</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>La storia infinita</td>
+                            <td>-</td>
+                            <td><span class="badge bg-success">Disponibile</span></td>
+                            <td class="text-center table-actions">
+                                <button class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button class="btn btn-sm btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
     
 </body>
 </html>
