--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
         .navbar {
             background-color: #212529; /* Colore sfondo navbar */
             padding: 0.5rem 1rem;
+
+        }
+
+        .bg-warning text-white{
+            color: white;
+        }
+        
+        
+        .table-actions button {
+            margin-right: 5px;
+        }
+        .section-title {
+            font-weight: bold;
+            margin-bottom: 10px;
         }
     </style>
 </head>
